# AudioConsole

./: CMakeLists.txt
include/: AudioProcessor.h  ConsoleInterface.h  WavFileManager.h
include/Effect/: AudioEffect.h  Distortion.h  Fade.h  Gain.h
src/: AudioProcessor.cpp  ConsoleInterface.cpp  WavFileManager.cpp  main.cpp
src/Effect/: Distortion.cpp  Fade.cpp  Gain.cpp
